--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<script type="module" src="webxr-gltf-viewer.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WebXR glTF Viewer</title>
+    <script type="module" src="webxr-gltf-viewer.js"></script>
+</head>
+<body>
+</body>
+</html>
